syntax = "proto3";
package protocol;
option go_package="github.com/merenguessss/Dracarys-go/protocol";

message Request{
  string service_name = 2; // 服务名
  map<string,bytes> metadata = 3; // 传递的数据
  bytes payload = 4; // body
}

message Response{
  string ret_code = 1; // 错误码   成功请求为 0
  string ret_msg = 2;  // 错误消息  成功为success，错误会返回错误信息
  map<string,bytes> metadata = 3; // 传递的数据
  bytes payload = 4; // body
}